# gemma-4-challenge

./: .env.example  .flutter-plugins-dependencies  .gitignore  GETTING_STARTED.md  IMPROVEMENT_PLAN.md  Makefile  README.md  README_DEV.md  SPEC.md  TASKS.MD  api_backend.py  main.dart  mkdocs.yml  pubspec.yaml  pyproject.toml  ruff.toml  test_generate_image.py  webchat_ui.py
.dart_tool/: package_config.json  package_graph.json
.dart_tool/chrome-device/Default/: BrowsingTopicsState  DIPS  Favicons  History  Network Persistent State  Preferences  Reporting and NEL  (+3 more)
.github/workflows/: ci.yml
agent/: agent_backend.py  roles.py  skills.py
android/app/: build.gradle.kts
docs/: IdeasdeGemma4Challenge.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: triage_session.dart
lib/screens/: emergency_resources_screen.dart  history_screen.dart  input_screen.dart  session_detail_screen.dart  triage_card_screen.dart
lib/services/: emergency_number_util.dart  local_logger.dart  model_integration_stub.dart  perf_timer.dart  triage_history_service.dart  voice_input_stub.dart
lib/theme/: app_colors.dart
lib/widgets/: color_block.dart  large_button.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
src/: api_backend.py  config.py  webchat_ui.py
src/lib/: README.md  main.dart
test/: widget_test.dart
tests/: test_api_backend.py  test_settings.py  test_webchat_ui.py
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+61 files in other folders)
