[project]
name = "gemma-4-challenge"
version = "0.1.0"
description = "A simple multi-modal webchat application using Gemma 4 models."
authors = [{name = "Jose Giori Herran Escobar", email = "josegherran@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit",
    "pydantic>=2.0.0",
    "strands-agents",
    "strands-agents-tools",
    "strands-agents-builder",
    "aiohttp",
    "httpx",
    "asyncio",
    "anyio",
    "uvicorn",
    "fastapi",
    "pillow",
    "streamlit-extras",
    # "streamlit-components",  # Removed due to Python 3.13+ incompatibility
]

[tool.uv]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "httpx",
    "mkdocs"
]
